ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/agent_id__c.field-meta.xml
<CustomField>
    <fullName>agent_id__c</fullName>
    <label>AgentID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>