ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/call_type__c.field-meta.xml
<CustomField>
    <fullName>call_type__c</fullName>
    <label>Call_Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>