ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/callstatus__c.field-meta.xml
<CustomField>
    <fullName>callstatus__c</fullName>
    <label>CallStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>