ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/customer_phone__c.field-meta.xml
<CustomField>
    <fullName>customer_phone__c</fullName>
    <label>CustomerPhone</label>
    <type>Phone</type>
</CustomField>