ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/did_num__c.field-meta.xml
<CustomField>
    <fullName>did_num__c</fullName>
    <label>DID Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>