ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/disposition__c.field-meta.xml
<CustomField>
    <fullName>disposition__c</fullName>
    <label>Disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>