ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/extension_num__c.field-meta.xml
<CustomField>
    <fullName>extension_num__c</fullName>
    <label>ExtensionNum</label>
    <length>15</length>
    <type>Text</type>
</CustomField>