ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/Followup_time__c.field-meta.xml
<CustomField>
    <fullName>Followup_time__c</fullName>
    <label>Followup_time</label>
    <type>DateTime</type>
</CustomField>