ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/isCTI_activity__c.field-meta.xml
<CustomField>
    <fullName>isCTI_activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCTI_activity</label>
    <type>Checkbox</type>
</CustomField>