ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/process_name__c.field-meta.xml
<CustomField>
    <fullName>process_name__c</fullName>
    <label>Process</label>
    <length>50</length>
    <type>Text</type>
</CustomField>