ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/queue_name__c.field-meta.xml
<CustomField>
    <fullName>queue_name__c</fullName>
    <label>Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>