ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/recording_file__c.field-meta.xml
<CustomField>
    <fullName>recording_file__c</fullName>
    <label>recording_file</label>
    <type>Url</type>
</CustomField>