ProdIND/ProdPrograms/force-app/main/default/objects/Activity/fields/sub_disposition__c.field-meta.xml
<CustomField>
    <fullName>sub_disposition__c</fullName>
    <label>Sub_disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>